[WPE][GTK] Bogus Response.{status,ok} for successful fetch() requests to a custom URI scheme handler https://bugs.webkit.org/show_bug.cgi?id=222471

Reviewed by Carlos Garcia Campos.

No new tests needed.

* UIProcess/API/glib/WebKitURISchemeRequest.cpp:
(webkitURISchemeRequestReadCallback): Mark response as having status "200 OK" when
webkit_uri_scheme_request_finish() gets passed a GInputStream.


Canonical link: https://commits.webkit.org/234664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273618 268f45cc-cd09-0410-ab3c-d52691b4dbfc